# UI-exercises

./: .gitignore  README.md
Qml_tut/SPA_3Part/: CMakeLists.txt  main.cpp
Qml_tut/Telegram_un/: ButtonColor.qml  CMakeLists.txt  DialogItem.qml  Main.qml  MessageBar.qml  MessageEditor.qml  MessageEdittor.qml  Resources.qrc  WindowBtn.qml  images.qrc  main.cpp
Qml_tut/custom_test/: CMakeLists.txt  Main.qml  main.cpp
